# lib/api/aspectclasses.go
@@ -1,0 +1,306 @@
+/*
+ * Copyright 2026 InfAI (CC SES)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package api
+
+import (
+	"encoding/json"
+	"net/http"
+	"strconv"
+	"strings"
+
+	"github.com/SENERGY-Platform/device-repository/lib/api/util"
+	"github.com/SENERGY-Platform/device-repository/lib/configuration"
+	"github.com/SENERGY-Platform/device-repository/lib/model"
+	"github.com/SENERGY-Platform/models/go/models"
+)
+
+func init() {
+	endpoints = append(endpoints, &AspectClassEndpoints{})
+}
+
+type AspectClassEndpoints struct{}
+
+// ListAspectClasses godoc
+// @Summary      list aspect-classes
+// @Description  list aspect-classes
+// @Tags         aspect-classes
+// @Produce      json
+// @Security Bearer
+// @Param        limit query integer false "default 100, will be ignored if 'ids' is set"
+// @Param        offset query integer false "default 0, will be ignored if 'ids' is set"
+// @Param        search query string false "filter"
+// @Param        sort query string false "default name.asc"
+// @Param        ids query string false "filter; ignores limit/offset; comma-separated list"
+// @Success      200 {array}  models.AspectClass
+// @Header       200 {integer}  X-Total-Count  "count of all matching elements; used for pagination"
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      404
+// @Failure      500
+// @Router       /aspect-classes [GET]
+func (this *AspectClassEndpoints) ListAspectClasses(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("GET /aspect-classes", func(writer http.ResponseWriter, request *http.Request) {
+		listoptions := model.AspectClassListOptions{
+			Limit:  100,
+			Offset: 0,
+		}
+		var err error
+		limitParam := request.URL.Query().Get("limit")
+		if limitParam != "" {
+			listoptions.Limit, err = strconv.ParseInt(limitParam, 10, 64)
+		}
+		if err != nil {
+			http.Error(writer, "unable to parse limit:"+err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		offsetParam := request.URL.Query().Get("offset")
+		if offsetParam != "" {
+			listoptions.Offset, err = strconv.ParseInt(offsetParam, 10, 64)
+		}
+		if err != nil {
+			http.Error(writer, "unable to parse offset:"+err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		idsParam := request.URL.Query().Get("ids")
+		if request.URL.Query().Has("ids") {
+			if idsParam != "" {
+				listoptions.Ids = strings.Split(strings.TrimSpace(idsParam), ",")
+			} else {
+				listoptions.Ids = []string{}
+			}
+		}
+
+		listoptions.Search = request.URL.Query().Get("search")
+		listoptions.SortBy = request.URL.Query().Get("sort")
+		if listoptions.SortBy == "" {
+			listoptions.SortBy = "name.asc"
+		}
+
+		result, total, err, errCode := control.ListAspectClasses(listoptions)
+		if err != nil {
+			http.Error(writer, err.Error(), errCode)
+			return
+		}
+
+		writer.Header().Set("X-Total-Count", strconv.FormatInt(total, 10))
+		writer.Header().Set("Content-Type", "application/json; charset=utf-8")
+		err = json.NewEncoder(writer).Encode(result)
+		if err != nil {
+			config.GetLogger().Info("unable to encode response", "error", err.Error())
+		}
+		return
+	})
+}
+
+// Get godoc
+// @Summary      get aspect-class
+// @Description  get aspect-class
+// @Tags         aspect-classes
+// @Produce      json
+// @Security Bearer
+// @Param        id path string true "Aspect Class Id"
+// @Success      200 {object}  models.AspectClass
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      404
+// @Failure      500
+// @Router       /aspect-classes/{id} [GET]
+func (this *AspectClassEndpoints) Get(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("GET /aspect-classes/{id}", func(writer http.ResponseWriter, request *http.Request) {
+		id := request.PathValue("id")
+		result, err, errCode := control.GetAspectClass(id)
+		if err != nil {
+			http.Error(writer, err.Error(), errCode)
+			return
+		}
+		writer.Header().Set("Content-Type", "application/json; charset=utf-8")
+		err = json.NewEncoder(writer).Encode(result)
+		if err != nil {
+			config.GetLogger().Info("unable to encode response", "error", err.Error())
+		}
+		return
+	})
+}
+
+// Validate godoc
+// @Summary      validate aspect-class
+// @Description  validate aspect-class
+// @Tags         aspect-classes
+// @Accept       json
+// @Security Bearer
+// @Param        dry-run query bool true "must be true; reminder, that this is not an update but a validation"
+// @Param        message body models.AspectClass true "Aspect-Class to be validated"
+// @Success      200
+// @Failure      400
+// @Failure      500
+// @Router       /aspect-classes [PUT]
+func (this *AspectClassEndpoints) Validate(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("PUT /aspect-classes", func(writer http.ResponseWriter, request *http.Request) {
+		dryRun, err := strconv.ParseBool(request.URL.Query().Get("dry-run"))
+		if err != nil {
+			http.Error(writer, err.Error(), http.StatusBadRequest)
+			return
+		}
+		if !dryRun {
+			http.Error(writer, "only with query-parameter 'dry-run=true' allowed", http.StatusNotImplemented)
+			return
+		}
+		aspectClass := models.AspectClass{}
+		err = json.NewDecoder(request.Body).Decode(&aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), http.StatusBadRequest)
+			return
+		}
+		err, code := control.ValidateAspectClass(aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), code)
+			return
+		}
+		writer.WriteHeader(http.StatusOK)
+	})
+}
+
+// Delete godoc
+// @Summary      delete aspect-class
+// @Description  delete aspect-class; may only be called by admins; can also be used to only validate deletes
+// @Tags         aspect-classes
+// @Security Bearer
+// @Param        dry-run query bool false "only validate deletion"
+// @Param        id path string true "Aspect Class Id"
+// @Success      200
+// @Failure      400
+// @Failure      401
+// @Failure      500
+// @Router       /aspect-classes/{id} [DELETE]
+func (this *AspectClassEndpoints) Delete(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("DELETE /aspect-classes/{id}", func(writer http.ResponseWriter, request *http.Request) {
+		id := request.PathValue("id")
+		dryRun := false
+		if request.URL.Query().Has("dry-run") {
+			var err error
+			dryRun, err = strconv.ParseBool(request.URL.Query().Get("dry-run"))
+			if err != nil {
+				http.Error(writer, err.Error(), http.StatusBadRequest)
+				return
+			}
+		}
+		if dryRun {
+			err, code := control.ValidateAspectClassDelete(id)
+			if err != nil {
+				http.Error(writer, err.Error(), code)
+				return
+			}
+			writer.WriteHeader(http.StatusOK)
+			return
+		}
+		token := util.GetAuthToken(request)
+		err, code := control.DeleteAspectClass(token, id)
+		if err != nil {
+			http.Error(writer, err.Error(), code)
+			return
+		}
+		writer.WriteHeader(http.StatusOK)
+	})
+}
+
+// Create godoc
+// @Summary      create aspect-class
+// @Description  create aspect-class; may only be called by admins
+// @Tags         aspect-classes
+// @Produce      json
+// @Security Bearer
+// @Param        message body models.AspectClass true "element"
+// @Success      200 {object}  models.AspectClass
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      404
+// @Failure      500
+// @Router       /aspect-classes [POST]
+func (this *AspectClassEndpoints) Create(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("POST /aspect-classes", func(writer http.ResponseWriter, request *http.Request) {
+		aspectClass := models.AspectClass{}
+		err := json.NewDecoder(request.Body).Decode(&aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), http.StatusBadRequest)
+			return
+		}
+		token := util.GetAuthToken(request)
+
+		result, err, errCode := control.SetAspectClass(token, aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), errCode)
+			return
+		}
+		writer.Header().Set("Content-Type", "application/json; charset=utf-8")
+		err = json.NewEncoder(writer).Encode(result)
+		if err != nil {
+			config.GetLogger().Info("unable to encode response", "error", err.Error())
+		}
+		return
+	})
+}
+
+// Set godoc
+// @Summary      set aspect-class
+// @Description  set aspect-class; may only be called by admins
+// @Tags         aspect-classes
+// @Produce      json
+// @Security Bearer
+// @Param        id path string true "Aspect Class Id"
+// @Param        message body models.AspectClass true "element"
+// @Success      200 {object}  models.AspectClass
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      404
+// @Failure      500
+// @Router       /aspect-classes/{id} [PUT]
+func (this *AspectClassEndpoints) Set(config configuration.Config, router *http.ServeMux, control Controller) {
+	router.HandleFunc("PUT /aspect-classes/{id}", func(writer http.ResponseWriter, request *http.Request) {
+		id := request.PathValue("id")
+		aspectClass := models.AspectClass{}
+		err := json.NewDecoder(request.Body).Decode(&aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		token := util.GetAuthToken(request)
+
+		if aspectClass.Id != id {
+			http.Error(writer, "id in body unequal to id in request endpoint", http.StatusBadRequest)
+			return
+		}
+
+		result, err, errCode := control.SetAspectClass(token, aspectClass)
+		if err != nil {
+			http.Error(writer, err.Error(), errCode)
+			return
+		}
+		writer.Header().Set("Content-Type", "application/json; charset=utf-8")
+		err = json.NewEncoder(writer).Encode(result)
+		if err != nil {
+			config.GetLogger().Info("unable to encode response", "error", err.Error())
+		}
+		return
+	})
+}
